# ebuy-server

./: .gitignore  authentication-service.code-workspace  ebuy.code-workspace  pull_request_workflow.yml
.github/workflows/: main.yml
authentication-service/: authentication-service.dockerfile  go.mod  go.sum
authentication-service/application/: application.go  config.go  router.go
authentication-service/cmd/api/: main.go
authentication-service/handler/: cookie.go  handler.go  jwt.go  models.go
authentication-service/service/: hashing.go  models.go  service.go
authentication-service/sqlc/users/: db.go  models.go  query.sql.go
image-proccessing-service/: app.py  image-proccessing-service.dockerfile  image_uploader.py  requirements.txt
media-service/: media-service.dockerfile  pom.xml
notification-service/: go.mod  go.sum
notification-service/application/: application.go  router.go
notification-service/cmd/api/: main.go
notification-service/handler/: handler.go
notification-service/messaging/: reciever.go
notification-service/service/: service.go
order-service/: go.mod  go.sum  order-service.dockerfile
order-service/application/: application.go  config.go  migrations.go  router.go
order-service/application/databaseInit/: db_init.go
order-service/application/migrations/: 001_orders.sql
order-service/cmd/api/: main.go
order-service/handler/: handler.go
order-service/service/: service.go
order-service/sqlc/: query.sql  schema.sql  sqlc.yaml
order-service/sqlc/orders/: db.go  models.go  query.sql.go
product-service/: go.mod  go.sum  product-service.dockerfile
product-service/application/: application.go  applications.go  config.go  migrations.go  router.go
product-service/handler/: handler.go  models.go
product-service/service/: models.go  service.go  service_test.go
product-service/sqlc/: query.sql  schema.sql  sqlc.yaml
project/: Makefile  docker-compose.yml  nginx.conf
project/database-init/: init.sql
project/nginx/: cert-key.pem  localhost.key  nginx.conf
project/ssl/: cert.pem  localhost.crt  localhost.key  nginx.conf
user-service/: Cargo.toml  user-service.dockerfile
user-service/migrations/: 0001_users_table.sql
user-service/src/: database.rs  handlers.rs  main.rs  messaging.rs  models.rs  service.rs
(+40 files in other folders)
