[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.3"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.34", features = ["serde"] }
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
